[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Slug/Crab Arm/crab_arm_bi.png" type="Texture" id=1]
[ext_resource path="res://assets/Slug/Crab Arm/crab_arm_clawA.png" type="Texture" id=2]
[ext_resource path="res://assets/Slug/Crab Arm/crab_arm_clawB.png" type="Texture" id=3]
[ext_resource path="res://ClawOBS.gd" type="Script" id=4]

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 328, 199 )
script = ExtResource( 4 )

[node name="Polygons" type="Node2D" parent="."]

[node name="bi" type="Polygon2D" parent="Polygons"]
position = Vector2( 132, 144 )
texture = ExtResource( 1 )
skeleton = NodePath("../../Skeleton")
polygon = PoolVector2Array( 0, 17.6875, 6, 13.5, 11.375, 5.25, 16.25, 2.25, 19.5625, 1.875, 23.875, 0.0625, 25, 0.75, 24.4375, 6.25, 20.125, 13.0625, 14.75, 19.125, 7.3125, 24.8125, 3, 23, 2, 22 )
bones = [ "bi", PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "bi/clawA", PoolRealArray( 0.5, 0, 0, 0.5, 0.5, 0.5, 0.5, 0, 0, 0, 0, 0.5, 0.5 ), "bi/clawA/clawB", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ) ]

[node name="clawA" type="Polygon2D" parent="Polygons"]
position = Vector2( 134, 104 )
texture = ExtResource( 2 )
skeleton = NodePath("../../Skeleton")
polygon = PoolVector2Array( 0.625, 0.9375, 0.5625, 3.25, 2.5625, 6.25, 5.75, 11, 7.6875, 17.3125, 3.5, 21.375, 3.0625, 24.3125, 5.875, 30.25, 10.8125, 41.0625, 13.3125, 45.0625, 16.9375, 44.875, 20.875, 41.75, 21.1875, 37.0625, 18, 30.4375, 18.4375, 20.4375, 16.5, 11.25, 11.0625, 3.3125, 5.5, 0.1875, 1.1875, 0.125 )
uv = PoolVector2Array( 0.625, 0.9375, 0.5625, 3.25, 2.5625, 6.25, 5.75, 11, 7.6875, 17.3125, 3.5, 21.375, 3.0625, 24.3125, 5.875, 30.25, 10.8125, 41.0625, 13.3125, 45.0625, 16.9375, 44.875, 20.875, 41.75, 21.1875, 37.0625, 18, 30.4375, 18.4375, 20.4375, 16.5, 11.25, 11.0625, 3.3125, 5.5, 0.1875, 1.1875, 0.125 )
bones = [ "bi", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "bi/clawA", PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "bi/clawA/clawB", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ) ]

[node name="clawB" type="Polygon2D" parent="Polygons"]
position = Vector2( 128, 108 )
texture = ExtResource( 3 )
skeleton = NodePath("../../Skeleton")
polygon = PoolVector2Array( 3.0625, 0.3125, 5.5, 5.875, 9.4375, 11.375, 13.125, 15.75, 12.5625, 18.625, 10.4375, 19.8125, 7.25, 19.625, 1.125, 12.6875, 0.125, 9.75, 0, 1.9375, 0.8125, 0.125 )
uv = PoolVector2Array( 3.0625, 0.3125, 5.5, 5.875, 9.4375, 11.375, 13.125, 15.75, 12.5625, 18.625, 10.4375, 19.8125, 7.25, 19.625, 1.125, 12.6875, 0.125, 9.75, 0, 1.9375, 0.8125, 0.125 )
bones = [ "bi", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "bi/clawA", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "bi/clawA/clawB", PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ) ]

[node name="Skeleton" type="Skeleton2D" parent="."]

[node name="bi" type="Bone2D" parent="Skeleton"]
rotation = -0.245497
rest = Transform2D( 1, 0, 0, 1, 134, 165 )
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="clawA" type="Bone2D" parent="Skeleton/bi"]
position = Vector2( 17, -18 )
rotation = 0.211388
rest = Transform2D( 1, 0, 0, 1, 17, -18 )
__meta__ = {
"_edit_bone_": true
}

[node name="clawB" type="Bone2D" parent="Skeleton/bi/clawA"]
position = Vector2( -12, -23 )
rotation = -8.04862
rest = Transform2D( -0.576432, -0.817145, 0.817145, -0.576432, -12, -22 )
__meta__ = {
"_edit_bone_": true
}

[node name="restPos" type="Position2D" parent="."]
position = Vector2( 12, -43 )

[node name="windPos" type="Position2D" parent="."]
position = Vector2( 21, -22 )

[node name="hitPos" type="Position2D" parent="."]
position = Vector2( -4, -61 )
